Fix overlapping map dropdown.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,6 @@ body {
 }
 
 .map-container {
-  height: 240px;
+  height: 239px;
   width: 336px;
 }
